# simplelang

./: CMakeLists.txt  README.md
src/: ast.h  bytecode.h  codegen.cpp  codegen.h  lexer.cpp  lexer.h  main.cpp  optimizer.cpp  optimizer.h  parser.cpp  parser.h  token.h  vm.cpp  vm.h
